# book-reading-and-pratice

./: .gitignore  CMakeLists.txt  README.md
JSON-TUTORIAL/: CMakeLists.txt  test.c  test.h
JSON-TUTORIAL/tinyjson/: tinyjson.c  tinyjson.h
Linux高性能服务器编程/: CMakeLists.txt
Linux高性能服务器编程/src/: playground_main.c  playground_main.cpp
Linux高性能服务器编程/src/10/: 1.cpp  3.cpp  3_copy.cpp
Linux高性能服务器编程/src/11/: 2_lst_timer.h  3.cpp  5_tw_timer.h
Linux高性能服务器编程/src/14/: 3.cpp
Linux高性能服务器编程/src/15/: 1_processpool.h  2_cgi_conn.cpp  3_threadpool.h  4_http_conn.h
Linux高性能服务器编程/src/5/: 1_main.c  3.cpp  5_test_abnormal_connection.cpp  6.cpp  7.cpp
Linux高性能服务器编程/src/6/: 1_cgi.cpp
Linux高性能服务器编程/src/8/: 1.cpp
Linux高性能服务器编程/src/9/: 1.cpp  3.cpp  4.cpp  6.cpp  7.cpp  7_epoll.cpp
OSPP/: CMakeLists.txt
OSPP/lib/: Barrier.cpp  Barrier.h  MyLock.h  RWLock.cpp  RWLock.h  ThreadSafeBoundedQueue.cpp  ThreadSafeBoundedQueue.h  ThreadSafeBoundedQueue_CV.cpp  ThreadSafeBoundedQueue_CV.h  ThreadSafeBoundedQueue_FIFO.cpp  ThreadSafeBoundedQueue_FIFO.h
OSPP/src/: playground.cpp
TLPI/: CMakeLists.txt
TLPI/lib/: binary_sems.h  file_perms.c  print_wait_status.h  semun.h  signal_functions.c  signal_functions.h  svmsg_file.h  ugid_functions.c  ugid_functions.h  weird.h
TLPI/src/: playground_main.c
UNP_Volume_1_Third_Edition/: CMakeLists.txt  README.md
UNP_Volume_1_Third_Edition/lib/: addrinfo.h  config.h  error.c  readlilne.c  readlilne.h  readn.c  readn.h  unp.h  unp_error.c  unp_error.h  wrapper.c  wrapper.h  writen.c  writen.h
UNP_Volume_1_Third_Edition/src/: playground_main.c
assembly_pg/procesures/: compile.sh  main.c  main.s
cpp_pg/test_coroutine/: CMakeLists.txt
cpp_pg/test_coroutine/src/: co_thread.cpp
draw.io_files/: README.md  Untitled Diagram.drawio.html
lib/: binary_sems.c  curr_time.c  error_functions.c  fifo_seqnum.h  file_perms.h  print_wait_status.c  read_line.c  read_line.h
node_pratice/: clear.js
pg/: CMakeLists.txt  node_server.js  nomain.cpp
pg/lib/: locker.h  tlpi_hdr.h
pg/src/: test.cpp
playground/: CMakeLists.txt  a.c  a.out  a.s  http_test.js  node_udp_test.js  test copy.s  test.cpp  test.o.dump  test.s
playground/lib/: a.cpp  a.h  error_functions.cpp  get_num.cpp
playground/libs/: a.cpp
playground/src/: iovec.cpp  test.cpp  test.h
playground_cpp/: README.md
playground_node/: download_file.mjs  package-lock.json  package.json  transfer_encoding_chunked.mjs
playground_node/src/: breakpoint_resumption.mjs
playground_rust/: Cargo.toml  build.rs
playground_rust/my_macro_derive/: Cargo.toml
playground_rust/my_macro_derive/src/: lib.rs
playground_rust/my_macro_rules/src/: lib.rs
playground_rust/src/: lib.rs  main.rs  test_mod.rs
playground_rust/src/my_ws/: message.rs
playground_rust/src/test_mod/: test_error.rs  test_iterator.rs  test_macro_derive.rs  test_macro_ruls.rs  test_smart_pointer.rs  test_string_and_str.rs  test_trait.rs
rust_pg/: Cargo.toml  test.mjs  tmp.c
rust_pg/my_macro_derive/: Cargo.toml
rust_pg/my_macro_derive/src/: lib.rs
rust_pg/my_macro_rules/: Cargo.toml
rust_pg/src/: lib.rs  main.rs  test_mod.rs
rust_pg/src/async_stream_demo/: mod.rs  use_async_stream.rs  use_stream_map.rs  use_try_stream.rs
rust_pg/src/design_pattern/: mod.rs
rust_pg/src/design_pattern/visit_pattern/: data.rs  mod.rs  visits.rs
rust_pg/src/graceful_shutdown/: mod.rs  telling.rs  waiting.rs  when.rs
rust_pg/src/js_ast/: mod.rs  my_js_ast.rs  my_js_lexer.rs  my_js_parser.rs  my_js_token.rs
rust_pg/src/magic_params/: mod.rs
rust_pg/src/my_dns/: byte_packet_buffer.rs  dns_header.rs  mock.rs  mod.rs  packet.rs  question.rs  record.rs  server.rs  types.rs
rust_pg/src/my_vec/: intoiter.rs  mod.rs  raw_vec.rs  vec.rs
rust_pg/src/my_ws/: handle_connection.rs  message.rs  mod.rs  shake.rs
rust_pg/src/test_mod/: test_hashmap.rs  test_lifetime.rs  test_thread.rs
rust_pg/src/tokio_util_pg/: decode_encode.rs  mod.rs
rust_pg/src/tower_inventing_the_service_trait/: handler.rs  mod.rs  server.rs
rust_pg/src/wait_something/: mod.rs
rust_pg/test_ffi/: Cargo.toml  build.rs
rust_pg/test_ffi/c/: add.c
rust_pg/test_ffi/c_libs/: add.c  dylib_for_rust.exp  dylib_for_rust.lib  static_for_rust.lib
rust_pg/test_ffi/c_libs_src/: CMakeLists.txt  build.ps1  build.sh  dylib.c  ms_build.ps1  static.c
rust_pg/test_ffi/src/: main.rs
rust_pg/tests/: my_dns.rs  tmp.rs
rust_pg/tests/async/: dig_in_async.rs  dig_in_saync_2.rs  future.rs  pin_swap.rs  pin_to_heap.rs  pin_to_stack.rs  put_a_pint_on_that.rs
src/: playground_main.c
src/10/: 1_retrieving_and_converting_calendar_times_main.c
src/13/: demo_main.c
src/15/: 1_retrieving_and_interpreting_file_stat_information_main.c  2_changing_the_owner_and_group_of_a_file_main.c  5_using_umask_main.c
src/18/: 3_using_nftw_to_walk_a_directory_tree_main.c  4_read_and_resolve_a_symbol_link_main.c
src/19/: 1_using_the_inotify_API_main.c
src/20/: 1_installing_a_handler_for_SIGINT_main.c  3_using_the_kill_system_call_main.c  6_sending_multiple_signals_main.c
src/21/: 1_calling_a_nonreentrant_function_from_both_main_and_a_signal_handler_main.c  2_performing_a_nonlocal_goto_from_a_signal_handler_main.c
src/22/: 1_an_implementation_of_signal_main.c  3_handling_realtime_signals_main.c  5_using_sigsuspend_main.c  6_synchronously_waiting_for_a_signal_with_sigwaitinfo_main.c  7_using_signalfd_to_read_signals_main.c
src/24_process_creation/: 1_using_fork_main.c  5_parent_and_child_race_to_write_a_message_after_fork_main.c
src/25_process_termination/: 2_interaction_of_fork_and_stdio_buffering_main.c
src/26_monitoring_child_processes/: 3_using_waitpid_to_retrieve_the_status_of_a_child_process_main.c  4_creating_a_zombie_child_process_main.c  5_reaping_dead_children_via_a_handler_for_SIGCHLD_main.c
src/27_program_execution/: 2_display_argument_list_and_environ_main.c  3_using_execlp_to_search_for_a_filename_in_path_main.c  5_passing_the_caller_environment_to_the_new_program_using_execl_main.c  (+2 more)
src/30/: 4_practice_main.c  (+2 more)
t/: CMakeLists.txt  README.md  test.c
(+163 files in other folders)
