[package]
name = "my_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
my_macro_rules={path = "./my_macro_rules"}
my_macro_derive={path = "./my_macro_derive"}
axum = "0.7.5"
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

mini-redis = "0.4"
bytes = "1"
ring = "0.17.8"
base64 = "0.22.1"
